feat(get by id): Added get by id for orders and customers
- added get by id for orders and customers to the open api specification
- added test cases for the orders and customers both for found and not found examples
- modified controller to load the values from the database.
